Add FrontEndPages Class