@@ -10,7 +10,6 @@ import com.nimbusds.oauth2.sdk.OAuth2Error;
 import com.nimbusds.oauth2.sdk.ResponseType;
 import com.nimbusds.oauth2.sdk.Scope;
 import com.nimbusds.oauth2.sdk.TokenErrorResponse;
-import com.nimbusds.oauth2.sdk.TokenRequest;
 import com.nimbusds.oauth2.sdk.id.ClientID;
 import com.nimbusds.oauth2.sdk.id.State;
 import com.nimbusds.oauth2.sdk.id.Subject;
@@ -27,7 +26,6 @@ import com.nimbusds.openid.connect.sdk.claims.ClaimsSetRequest;
 import com.nimbusds.openid.connect.sdk.claims.UserInfo;
 import net.minidev.json.JSONArray;
 import net.minidev.json.JSONObject;
-import org.apache.http.client.utils.URIBuilder;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
@@ -41,6 +39,7 @@ import uk.gov.di.authentication.ipv.services.IPVAuthorisationService;
 import uk.gov.di.authentication.ipv.services.IPVTokenService;
 import uk.gov.di.orchestration.audit.AuditContext;
 import uk.gov.di.orchestration.audit.TxmaAuditUser;
+import uk.gov.di.orchestration.shared.api.FrontEndPages;
 import uk.gov.di.orchestration.shared.entity.AccountIntervention;
 import uk.gov.di.orchestration.shared.entity.AccountInterventionState;
 import uk.gov.di.orchestration.shared.entity.ClientRegistry;
@@ -130,7 +129,12 @@ class IPVCallbackHandlerTest {
     private final IPVCallbackHelper ipvCallbackHelper = mock(IPVCallbackHelper.class);
     private final AuditService auditService = mock(AuditService.class);
     private final AwsSqsClient awsSqsClient = mock(AwsSqsClient.class);
-    private static final URI LOGIN_URL = URI.create("https://example.com");
+    private final FrontEndPages frontEndPages = mock(FrontEndPages.class);
+    private static final URI FRONT_END_ERROR_URI = URI.create("https://example.com/error");
+    private static final URI FRONT_END_IPV_CALLBACK_ERROR_URI =
+            URI.create("https://example.com/ipv-callback-session-expiry-error");
+    private static final URI FRONT_END_IPV_CALLBACK_URI =
+            URI.create("https://example.com/ipv-callback");
     private static final URI OIDC_BASE_URL = URI.create("https://base-url.com");
     private static final URI INTERNAL_SECTOR_URI = URI.create("https://test.account.gov.uk");
     private static final AuthorizationCode AUTH_CODE = new AuthorizationCode();
@@ -261,9 +265,11 @@ class IPVCallbackHandlerTest {
                         accountInterventionService,
                         cookieHelper,
                         noSessionOrchestrationService,
-                        ipvCallbackHelper);
-        when(configService.getLoginURI()).thenReturn(LOGIN_URL);
-        when(configService.getOidcApiBaseURL()).thenReturn(Optional.of(OIDC_BASE_URL));
+                        ipvCallbackHelper,
+                        frontEndPages);
+        when(frontEndPages.ipvCallbackURI()).thenReturn(FRONT_END_IPV_CALLBACK_URI);
+        when(frontEndPages.errorIpvCallbackURI()).thenReturn(FRONT_END_IPV_CALLBACK_ERROR_URI);
+        when(frontEndPages.errorURI()).thenReturn(FRONT_END_ERROR_URI);
         when(configService.getIPVBackendURI()).thenReturn(IPV_URI);
         when(configService.getInternalSectorURI()).thenReturn(INTERNAL_SECTOR_URI);
         when(configService.isIdentityEnabled()).thenReturn(true);
@@ -287,14 +293,14 @@ class IPVCallbackHandlerTest {
 
     @Test
     void shouldRedirectToFrontendErrorPageWhenIdentityIsNotEnabled()
-            throws URISyntaxException, UnsuccessfulCredentialResponseException {
+            throws UnsuccessfulCredentialResponseException {
         when(configService.isIdentityEnabled()).thenReturn(false);
         usingValidSession();
         usingValidClientSession();
 
-        var event = getApiGatewayProxyRequestEvent(null, clientRegistry);
-
-        assertDoesRedirectToFrontendErrorPage(event, "error");
+        var request = getApiGatewayProxyRequestEvent(null, clientRegistry);
+        var response = handler.handleRequest(request, context);
+        assertDoesRedirectToFrontendPage(response, FRONT_END_ERROR_URI);
 
         verifyNoInteractions(auditService);
     }
@@ -390,7 +396,6 @@ class IPVCallbackHandlerTest {
     @Test
     void shouldReturnAuthCodeToRPWhenP0AndReturnCodePresentPermittedAndRequested()
             throws UnsuccessfulCredentialResponseException,
-                    URISyntaxException,
                     IpvCallbackException,
                     UserNotFoundException {
         usingValidSession();
@@ -440,21 +445,13 @@ class IPVCallbackHandlerTest {
                         any(), any(), any(), any(), any(), any(), any(), any(), any(), any()))
                 .thenReturn(
                         new AuthenticationSuccessResponse(
-                                new URIBuilder(LOGIN_URL).setPath("ipv-callback").build(),
-                                null,
-                                null,
-                                null,
-                                null,
-                                null,
-                                null));
+                                FRONT_END_IPV_CALLBACK_URI, null, null, null, null, null, null));
 
         var response =
                 makeHandlerRequest(
                         getApiGatewayProxyRequestEvent(userIdentityUserInfo, clientRegistry));
 
-        var expectedURI = new URIBuilder(LOGIN_URL).setPath("ipv-callback").build().toString();
-        assertThat(response, hasStatus(302));
-        assertEquals(expectedURI, response.getHeaders().get(ResponseHeaders.LOCATION));
+        assertDoesRedirectToFrontendPage(response, FRONT_END_IPV_CALLBACK_URI);
     }
 
     @Test
@@ -498,7 +495,7 @@ class IPVCallbackHandlerTest {
     @MethodSource("additionalClaims")
     void shouldInvokeSPOTAndRedirectToFrontendCallbackForSuccessfulResponseAtP2(
             Map<String, String> additionalClaims)
-            throws URISyntaxException, Json.JsonException, UnsuccessfulCredentialResponseException {
+            throws Json.JsonException, UnsuccessfulCredentialResponseException {
         usingValidSession();
         usingValidClientSession();
 
@@ -529,9 +526,7 @@ class IPVCallbackHandlerTest {
                         getApiGatewayProxyRequestEvent(
                                 new UserInfo(new JSONObject(claims)), clientRegistry));
 
-        assertThat(response, hasStatus(302));
-        var expectedRedirectURI = new URIBuilder(LOGIN_URL).setPath("ipv-callback").build();
-        assertEquals(expectedRedirectURI.toString(), response.getHeaders().get("Location"));
+        assertDoesRedirectToFrontendPage(response, FRONT_END_IPV_CALLBACK_URI);
         var expectedRpPairwiseSub =
                 ClientSubjectHelper.getSubject(
                         userProfile, clientRegistry, dynamoService, INTERNAL_SECTOR_URI.toString());
@@ -555,9 +550,7 @@ class IPVCallbackHandlerTest {
 
     @Test
     void shouldNotInvokeSPOTAndShouldRedirectToFrontendErrorPageWhenVTMMismatch()
-            throws URISyntaxException,
-                    UnsuccessfulCredentialResponseException,
-                    IpvCallbackException {
+            throws UnsuccessfulCredentialResponseException, IpvCallbackException {
         usingValidSession();
         usingValidClientSession();
         var userIdentityUserInfo =
@@ -571,9 +564,10 @@ class IPVCallbackHandlerTest {
                 .when(ipvCallbackHelper)
                 .validateUserIdentityResponse(userIdentityUserInfo, VTR_LIST);
 
-        var event = getApiGatewayProxyRequestEvent(userIdentityUserInfo, clientRegistry);
+        var request = getApiGatewayProxyRequestEvent(userIdentityUserInfo, clientRegistry);
 
-        assertDoesRedirectToFrontendErrorPage(event, "error");
+        var response = handler.handleRequest(request, context);
+        assertDoesRedirectToFrontendPage(response, FRONT_END_ERROR_URI);
 
         verifyAuditEvent(IPVAuditableEvent.IPV_AUTHORISATION_RESPONSE_RECEIVED);
         verifyAuditEvent(IPVAuditableEvent.IPV_SUCCESSFUL_TOKEN_RESPONSE_RECEIVED);
@@ -585,13 +579,14 @@ class IPVCallbackHandlerTest {
 
     @Test
     void shouldRedirectToFrontendErrorPageWhenSessionIsNotFoundInRedis() throws URISyntaxException {
-        var event = new APIGatewayProxyRequestEvent();
-        event.setQueryStringParameters(Collections.emptyMap());
-        event.setHeaders(Map.of(COOKIE, buildCookieString()));
+        var request = new APIGatewayProxyRequestEvent();
+        request.setQueryStringParameters(Collections.emptyMap());
+        request.setHeaders(Map.of(COOKIE, buildCookieString()));
 
         when(sessionService.readSessionFromRedis(SESSION_ID)).thenReturn(Optional.empty());
 
-        assertDoesRedirectToFrontendErrorPage(event, "ipv-callback-session-expiry-error");
+        var response = handler.handleRequest(request, context);
+        assertDoesRedirectToFrontendPage(response, FRONT_END_IPV_CALLBACK_ERROR_URI);
         verifyNoInteractions(auditService);
     }
 
@@ -609,11 +604,12 @@ class IPVCallbackHandlerTest {
         when(dynamoService.getUserProfileFromEmail(TEST_EMAIL_ADDRESS))
                 .thenReturn(Optional.empty());
 
-        APIGatewayProxyRequestEvent event = new APIGatewayProxyRequestEvent();
-        event.setQueryStringParameters(responseHeaders);
-        event.setHeaders(Map.of(COOKIE, buildCookieString()));
+        APIGatewayProxyRequestEvent request = new APIGatewayProxyRequestEvent();
+        request.setQueryStringParameters(responseHeaders);
+        request.setHeaders(Map.of(COOKIE, buildCookieString()));
 
-        assertDoesRedirectToFrontendErrorPage(event, "error");
+        var response = handler.handleRequest(request, context);
+        assertDoesRedirectToFrontendPage(response, FRONT_END_ERROR_URI);
 
         verifyNoInteractions(auditService);
         verifyNoInteractions(dynamoIdentityService);
@@ -621,7 +617,7 @@ class IPVCallbackHandlerTest {
 
     @Test
     void shouldRedirectToFrontendErrorPageWhenUserIdentityRequestFails()
-            throws URISyntaxException, UnsuccessfulCredentialResponseException {
+            throws UnsuccessfulCredentialResponseException {
         usingValidSession();
         usingValidClientSession();
 
@@ -639,7 +635,7 @@ class IPVCallbackHandlerTest {
                                 IdentityClaims.CREDENTIAL_JWT.getValue(),
                                 CREDENTIAL_JWT_CLAIM));
 
-        var event =
+        var request =
                 getApiGatewayProxyRequestEvent(
                         new UserInfo(new JSONObject(claims)), clientRegistry);
 
@@ -648,7 +644,9 @@ class IPVCallbackHandlerTest {
                                 "Error when attempting to parse http response to UserInfoResponse"))
                 .when(ipvTokenService)
                 .sendIpvUserIdentityRequest(any(UserInfoRequest.class));
-        assertDoesRedirectToFrontendErrorPage(event, "error");
+
+        var response = handler.handleRequest(request, context);
+        assertDoesRedirectToFrontendPage(response, FRONT_END_ERROR_URI);
     }
 
     @Test
@@ -738,11 +736,12 @@ class IPVCallbackHandlerTest {
         responseHeaders.put("state", STATE.getValue());
         when(dynamoClientService.getClient(CLIENT_ID.getValue())).thenReturn(Optional.empty());
 
-        APIGatewayProxyRequestEvent event = new APIGatewayProxyRequestEvent();
-        event.setHeaders(Map.of(COOKIE, buildCookieString()));
-        event.setQueryStringParameters(responseHeaders);
+        APIGatewayProxyRequestEvent request = new APIGatewayProxyRequestEvent();
+        request.setHeaders(Map.of(COOKIE, buildCookieString()));
+        request.setQueryStringParameters(responseHeaders);
 
-        assertDoesRedirectToFrontendErrorPage(event, "ipv-callback-session-expiry-error");
+        var response = handler.handleRequest(request, context);
+        assertDoesRedirectToFrontendPage(response, FRONT_END_IPV_CALLBACK_ERROR_URI);
 
         verifyNoInteractions(ipvTokenService);
         verifyNoInteractions(auditService);
@@ -751,15 +750,16 @@ class IPVCallbackHandlerTest {
 
     @Test
     void shouldRedirectToFrontendErrorPageWhenClientRegistryIsNotFound()
-            throws URISyntaxException, UnsuccessfulCredentialResponseException {
+            throws UnsuccessfulCredentialResponseException {
         usingValidSession();
         usingValidClientSession();
 
-        var event = getApiGatewayProxyRequestEvent(null, clientRegistry);
+        var request = getApiGatewayProxyRequestEvent(null, clientRegistry);
 
         when(dynamoClientService.getClient(CLIENT_ID.getValue())).thenReturn(Optional.empty());
 
-        assertDoesRedirectToFrontendErrorPage(event, "error");
+        var response = handler.handleRequest(request, context);
+        assertDoesRedirectToFrontendPage(response, FRONT_END_ERROR_URI);
 
         verifyNoInteractions(ipvTokenService);
         verifyNoInteractions(auditService);
@@ -767,8 +767,7 @@ class IPVCallbackHandlerTest {
     }
 
     @Test
-    void shouldRedirectToFrontendErrorPageWhenTokenResponseIsNotSuccessful()
-            throws URISyntaxException {
+    void shouldRedirectToFrontendErrorPageWhenTokenResponseIsNotSuccessful() {
         var salt = "Mmc48imEuO5kkVW7NtXVtx5h0mbCTfXsqXdWvbRMzdw=".getBytes(StandardCharsets.UTF_8);
         var clientRegistry = generateClientRegistryNoClaims();
         var userProfile = generateUserProfile();
@@ -776,7 +775,6 @@ class IPVCallbackHandlerTest {
         usingValidClientSession();
         var unsuccessfulTokenResponse =
                 new TokenErrorResponse(new ErrorObject("Test error response"));
-        var tokenRequest = mock(TokenRequest.class);
         Map<String, String> responseHeaders = new HashMap<>();
         responseHeaders.put("code", AUTH_CODE.getValue());
         responseHeaders.put("state", STATE.getValue());
@@ -789,11 +787,12 @@ class IPVCallbackHandlerTest {
         when(dynamoService.getOrGenerateSalt(userProfile)).thenReturn(salt);
         when(ipvTokenService.getToken(AUTH_CODE.getValue())).thenReturn(unsuccessfulTokenResponse);
 
-        var event = new APIGatewayProxyRequestEvent();
-        event.setQueryStringParameters(responseHeaders);
-        event.setHeaders(Map.of(COOKIE, buildCookieString()));
+        var request = new APIGatewayProxyRequestEvent();
+        request.setQueryStringParameters(responseHeaders);
+        request.setHeaders(Map.of(COOKIE, buildCookieString()));
 
-        assertDoesRedirectToFrontendErrorPage(event, "error");
+        var response = handler.handleRequest(request, context);
+        assertDoesRedirectToFrontendPage(response, FRONT_END_ERROR_URI);
 
         verifyAuditEvent(IPVAuditableEvent.IPV_AUTHORISATION_RESPONSE_RECEIVED);
         verifyAuditEvent(IPVAuditableEvent.IPV_UNSUCCESSFUL_TOKEN_RESPONSE_RECEIVED);
@@ -846,7 +845,7 @@ class IPVCallbackHandlerTest {
     @Test
     void
             shouldRedirectToFrontendErrorPageWhenNoSessionCookieButCallToNoSessionOrchestrationServiceThrowsException()
-                    throws NoSessionException, URISyntaxException {
+                    throws NoSessionException {
         usingValidSession();
         usingValidClientSession();
 
@@ -866,10 +865,7 @@ class IPVCallbackHandlerTest {
                                 .withQueryStringParameters(queryParameters),
                         context);
 
-        var expectedRedirectURI =
-                new URIBuilder(LOGIN_URL).setPath("ipv-callback-session-expiry-error").build();
-        assertThat(response, hasStatus(302));
-        assertEquals(expectedRedirectURI.toString(), response.getHeaders().get("Location"));
+        assertDoesRedirectToFrontendPage(response, FRONT_END_IPV_CALLBACK_ERROR_URI);
         assertThat(
                 logging.events(),
                 hasItem(
@@ -969,7 +965,6 @@ class IPVCallbackHandlerTest {
             throws UnsuccessfulCredentialResponseException {
         var successfulTokenResponse =
                 new AccessTokenResponse(new Tokens(new BearerAccessToken(), null));
-        var tokenRequest = mock(TokenRequest.class);
         Map<String, String> responseHeaders = new HashMap<>();
         responseHeaders.put("code", AUTH_CODE.getValue());
         responseHeaders.put("state", STATE.getValue());
@@ -990,12 +985,10 @@ class IPVCallbackHandlerTest {
         return event;
     }
 
-    private void assertDoesRedirectToFrontendErrorPage(
-            APIGatewayProxyRequestEvent event, String errorPagePath) throws URISyntaxException {
-        var response = handler.handleRequest(event, context);
+    private void assertDoesRedirectToFrontendPage(
+            APIGatewayProxyResponseEvent response, URI frontEndPage) {
         assertThat(response, hasStatus(302));
-
-        var expectedRedirectURI = new URIBuilder(LOGIN_URL).setPath(errorPagePath).build();
+        var expectedRedirectURI = frontEndPage;
         assertEquals(expectedRedirectURI.toString(), response.getHeaders().get("Location"));
     }
 }
